Velcro test First SandBox/src/objects/QLV_Account_KPI__c.object
<CustomObject>
    <description>QlikView Data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Account this record belongs to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QLV Account KPIs</relationshipLabel>
        <relationshipName>QLV_Account_KPIs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_CY__c</fullName>
        <label>Budget CY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Sales_CY__c</fullName>
        <description>Gross Sales</description>
        <label>Gross Sales CY</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QLV Account KPI</label>
    <nameField>
        <label>QV_Account_KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QLV Account KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>